Adding some code.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div style="color: gold; font-style: italic;">
         <h1> My Name is HansRaj Meena</h1>
+        <p> I am Creating a Web apllication For everyone</p>
     </div>
 </body>
 </html>
