--- a/contact.html
+++ b/contact.html
@@ -55,19 +55,21 @@
     <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
         style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
         <li class="nav-item" role="presentation">
-            <button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button" role="tab"
-                aria-selected="true">Home</button>
+            <a href="index.html"><button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab"
+                    type="button" role="tab" aria-selected="true">Home</button></a>
+
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
-                aria-selected="false">Profile</button>
+            <a href="about.html"><button class="nav-link rounded-5" id="About-tab2" data-bs-toggle="tab" type="button"
+                    role="tab" aria-selected="false">About</button></a>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
-                aria-selected="false">Contact</button>
+            <a href="contact.html"><button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab"
+                    type="button" role="tab" aria-selected="false">Contact</button></a>
+
         </li>
     </ul>
-    
+
     <div class="container">
         <h1>Contact Form</h1>
         <form action="/action_page.php">
