--- a/about.html
+++ b/about.html
@@ -6,30 +6,96 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-  <title>Document</title>
+    <!-- Bootstrap CSS -->
+  
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+        }
+
+        .about-header {
+            background-color: #343a40;
+            color: white;
+            padding: 30px;
+            text-align: center;
+        }
+
+        .about-section {
+            padding: 50px 20px;
+        }
+
+        .about-section h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+
+        .about-section p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+
+        .footer {
+            background-color: #343a40;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            margin-top: 30px;
+        }
+    </style>
 </head>
 
 <body>
-  <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
+
+    <!-- Navbar -->
+    <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
     <li class="nav-item" role="presentation">
-      <a href="index.html"><button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
+      <a href="index.html"><button class="nav-link rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
           role="tab" aria-selected="true">Home</button></a>
 
     </li>
     <li class="nav-item" role="presentation">
-      <a href="about.html"><button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button"
-          role="tab" aria-selected="false">Profile</button></a>
+      <a href="about.html"><button class="nav-link rounded-5" id="About" data-bs-toggle="tab" type="button"
+          role="tab" aria-selected="false">About</button></a>
     </li>
     <li class="nav-item" role="presentation">
       <a href="contact.html"><button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button"
           role="tab" aria-selected="false">Contact</button></a>
 
     </li>
-  </ul>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-    crossorigin="anonymous"></script>
+  </ul>   
+
+    <!-- About Section -->
+    <section class="about-header">
+        <div class="container">
+            <h1>About Us</h1>
+        </div>
+    </section>
+
+    <section class="about-section">
+        <div class="container">
+            <h2>Our Story</h2>
+            <p>
+                Welcome to MyWebsite! We are a company dedicated to providing high-quality services to our clients. Our
+                mission is to deliver exceptional results and build long-term relationships based on trust and integrity.
+            </p>
+            <p>
+                Our team consists of skilled professionals who are passionate about their work. We believe in innovation,
+                collaboration, and continuous learning to stay ahead in the ever-changing digital world.
+            </p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2025 MyWebsite | All Rights Reserved</p>
+    </footer>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
