--- a/index.html
+++ b/index.html
@@ -7,19 +7,64 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <title>Document</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <style>
+      body {
+          font-family: Arial, sans-serif;
+          background-color: #f8f9fa;
+      }
+
+      .hero-section {
+          background: url('https://via.placeholder.com/1500x600') no-repeat center center;
+          background-size: cover;
+          color: white;
+          height: 100vh;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+      }
+
+      .hero-section h1 {
+          font-size: 3.5rem;
+      }
+
+      .feature-section {
+          padding: 60px 0;
+          background-color: #f1f1f1;
+      }
+
+      .feature-section h2 {
+          font-size: 2.5rem;
+          margin-bottom: 20px;
+      }
+
+      .feature-card {
+          margin-top: 30px;
+      }
+
+      .footer {
+          background-color: #343a40;
+          color: white;
+          padding: 20px;
+          text-align: center;
+      }
+  </style>
 </head>
 
 <body>
   <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
     <li class="nav-item" role="presentation">
-      <a href="index.html"><button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
+      <a href="index.html"><button class="nav-link rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
           role="tab" aria-selected="true">Home</button></a>
 
     </li>
     <li class="nav-item" role="presentation">
-      <a href="about.html"><button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button"
-          role="tab" aria-selected="false">Profile</button></a>
+      <a href="about.html"><button class="nav-link rounded-5" id="About" data-bs-toggle="tab" type="button"
+          role="tab" aria-selected="false">About</button></a>
     </li>
     <li class="nav-item" role="presentation">
       <a href="contact.html"><button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button"
@@ -27,6 +72,60 @@
 
     </li>
   </ul>
+  <!-- Hero Section -->
+  <section class="hero-section">
+    <div>
+        <h1>Welcome to MyWebsite</h1>
+        <p>We deliver high-quality services with passion and professionalism.</p>
+        <a href="about.html" class="btn btn-primary btn-lg">Learn More</a>
+    </div>
+</section>
+
+<!-- Features Section -->
+<section class="feature-section text-center">
+    <div class="container">
+        <h2>What We Do</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card feature-card">
+                    <img src="https://via.placeholder.com/300" class="card-img-top" alt="Feature 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Web Development</h5>
+                        <p class="card-text">We create modern, responsive, and user-friendly websites.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card feature-card">
+                    <img src="https://via.placeholder.com/300" class="card-img-top" alt="Feature 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Mobile Development</h5>
+                        <p class="card-text">Building custom mobile applications for your business needs.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card feature-card">
+                    <img src="https://via.placeholder.com/300" class="card-img-top" alt="Feature 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Digital Marketing</h5>
+                        <p class="card-text">We help you reach your audience with effective marketing strategies.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="footer">
+    <p>&copy; 2025 MyWebsite | All Rights Reserved</p>
+</footer>
+
+<!-- Bootstrap JS and dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
