--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
 
       .hero-section {
-          background: url('https://via.placeholder.com/1500x600') no-repeat center center;
+          background: url('img/Imgb') no-repeat center center;
           background-size: cover;
           color: white;
           height: 100vh;
@@ -32,17 +32,30 @@
       }
 
       .feature-section {
+            background-size: cover; 
+            background-position: center; 
+            color: white;
+            height: 100vh; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
           padding: 60px 0;
-          background-color: #f1f1f1;
+          background-color:rgb(45 35 88);
       }
 
       .feature-section h2 {
           font-size: 2.5rem;
           margin-bottom: 20px;
+          margin-top: 30px;
+          width: 100%; 
+            height: 200px;
       }
 
       .feature-card {
-          margin-top: 30px;
+        background-color: rgb(68, 105, 183);
+          
+            object-fit: cover;
       }
 
       .footer {
@@ -73,7 +86,7 @@
     </li>
   </ul>
   <!-- Hero Section -->
-  <section class="hero-section">
+  <section style="background-image: ;" class="hero-section">
     <div>
         <h1>Welcome to MyWebsite</h1>
         <p>We deliver high-quality services with passion and professionalism.</p>
@@ -88,7 +101,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card feature-card">
-                    <img src="https://via.placeholder.com/300" class="card-img-top" alt="Feature 1">
+                    <img src="img/web devp.jpeg" class="card-img-top" alt="Feature 1">
                     <div class="card-body">
                         <h5 class="card-title">Web Development</h5>
                         <p class="card-text">We create modern, responsive, and user-friendly websites.</p>
@@ -97,7 +110,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card feature-card">
-                    <img src="https://via.placeholder.com/300" class="card-img-top" alt="Feature 2">
+                    <img src="img/Mob.jpeg" class="card-img-top" alt="Feature 2">
                     <div class="card-body">
                         <h5 class="card-title">Mobile Development</h5>
                         <p class="card-text">Building custom mobile applications for your business needs.</p>
@@ -106,7 +119,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card feature-card">
-                    <img src="https://via.placeholder.com/300" class="card-img-top" alt="Feature 3">
+                    <img src="img/Digital.jpeg" class="card-img-top" alt="Feature 3">
                     <div class="card-body">
                         <h5 class="card-title">Digital Marketing</h5>
                         <p class="card-text">We help you reach your audience with effective marketing strategies.</p>
@@ -118,9 +131,59 @@
 </section>
 
 <!-- Footer -->
-<footer class="footer">
-    <p>&copy; 2025 MyWebsite | All Rights Reserved</p>
-</footer>
+    <!-- Footer Section -->
+    <footer class="footer">
+      <div class="container">
+          <div class="row">
+              <!-- Contact Info -->
+              <div class="col-md-3">
+                  <h5>Contact Us</h5>
+                  <div class="contact-info">
+                      <p><strong>Email:</strong> info@mywebsite.com</p>
+                      <p><strong>Phone:</strong> +1 234 567 890</p>
+                      <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
+                  </div>
+              </div>
+
+              <!-- Quick Links -->
+              <div class="col-md-3">
+                  <h5>Quick Links</h5>
+                  <div class="footer-links">
+                      <a href="#">Home</a>
+                      <a href="#">About</a>
+                      <a href="#">Services</a>
+                      <a href="#">Contact</a>
+                  </div>
+              </div>
+
+              <!-- Social Media -->
+              <div class="col-md-3">
+                  <h5>Follow Us</h5>
+                  <div class="social-icons">
+                      <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
+                      <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+                      <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+                      <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                  </div>
+              </div>
+
+              <!-- Newsletter Signup -->
+              <div class="col-md-3">
+                  <h5>Newsletter</h5>
+                  <p>Sign up for our newsletter to get the latest updates.</p>
+                  <form action="#" method="post">
+                      <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
+                      <button type="submit" class="btn btn-light btn-block">Subscribe</button>
+                  </form>
+              </div>
+          </div>
+
+          <!-- Copyright -->
+          <div class="text-center mt-4">
+              <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+          </div>
+      </div>
+  </footer>
 
 <!-- Bootstrap JS and dependencies -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
