--- a/contact.html
+++ b/contact.html
@@ -283,6 +283,59 @@
             <input type="submit" value="Submit">
         </form>
     </div>
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <!-- Contact Info -->
+                <div class="col-md-3">
+                    <h5>Contact Us</h5>
+                    <div class="contact-info">
+                        <p><strong>Email:</strong> info@mywebsite.com</p>
+                        <p><strong>Phone:</strong> +1 234 567 890</p>
+                        <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
+                    </div>
+                </div>
+  
+                <!-- Quick Links -->
+                <div class="col-md-3">
+                    <h5>Quick Links</h5>
+                    <div class="footer-links">
+                        <a href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Services</a>
+                        <a href="#">Contact</a>
+                    </div>
+                </div>
+  
+                <!-- Social Media -->
+                <div class="col-md-3">
+                    <h5>Follow Us</h5>
+                    <div class="social-icons">
+                        <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+  
+                <!-- Newsletter Signup -->
+                <div class="col-md-3">
+                    <h5>Newsletter</h5>
+                    <p>Sign up for our newsletter to get the latest updates.</p>
+                    <form action="#" method="post">
+                        <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
+                        <button type="submit" class="btn btn-light btn-block">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+  
+            <!-- Copyright -->
+            <div class="text-center mt-4">
+                <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
