--- a/about.html
+++ b/about.html
@@ -34,13 +34,34 @@
             font-size: 1.2rem;
             line-height: 1.6;
         }
-
         .footer {
             background-color: #343a40;
             color: white;
-            padding: 20px;
-            text-align: center;
-            margin-top: 30px;
+            padding: 40px 0;
+        }
+
+        .footer .footer-links a {
+            color: #adb5bd;
+            text-decoration: none;
+            margin-right: 20px;
+        }
+
+        .footer .footer-links a:hover {
+            color: #f8f9fa;
+        }
+
+        .footer .social-icons a {
+            color: #adb5bd;
+            margin: 0 10px;
+            font-size: 1.5rem;
+        }
+
+        .footer .social-icons a:hover {
+            color: #f8f9fa;
+        }
+
+        .footer .contact-info p {
+            margin: 5px 0;
         }
     </style>
 </head>
@@ -48,7 +69,7 @@
 <body>
 
     <!-- Navbar -->
-    <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
+    <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
     <li class="nav-item" role="presentation">
       <a href="index.html"><button class="nav-link rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
@@ -87,64 +108,69 @@
         </div>
     </section>
 
-   <!-- Footer Section -->
-   <footer class="footer">
-    <div class="container">
-        <div class="row">
-            <!-- Contact Info -->
-            <div class="col-md-3">
-                <h5>Contact Us</h5>
-                <div class="contact-info">
-                    <p><strong>Email:</strong> info@mywebsite.com</p>
-                    <p><strong>Phone:</strong> +1 234 567 890</p>
-                    <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
-                </div>
-            </div>
+<!-- Footer -->
+    <!-- Footer Section -->
+    <footer class="footer">
+      <div class="container">
+          <div class="row">
+              <!-- Contact Info -->
+              <div class="col-md-3">
+                  <h5>Contact Us</h5>
+                  <div class="contact-info">
+                      <p><strong>Email:</strong> info@mywebsite.com</p>
+                      <p><strong>Phone:</strong> +1 234 567 890</p>
+                      <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
+                  </div>
+              </div>
 
-            <!-- Quick Links -->
-            <div class="col-md-3">
-                <h5>Quick Links</h5>
-                <div class="footer-links">
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Services</a>
-                    <a href="#">Contact</a>
-                </div>
-            </div>
+              <!-- Quick Links -->
+              <div class="col-md-3">
+                  <h5>Quick Links</h5>
+                  <div class="footer-links">
+                      <a href="#">Home</a>
+                      <a href="#">About</a>
+                      <a href="#">Services</a>
+                      <a href="#">Contact</a>
+                  </div>
+              </div>
 
-            <!-- Social Media -->
-            <div class="col-md-3">
-                <h5>Follow Us</h5>
-                <div class="social-icons">
-                    <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
-                </div>
-            </div>
+              <!-- Social Media -->
+              <div class="col-md-3">
+                  <h5>Follow Us</h5>
+                  <div class="social-icons">
+                      <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
+                      <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+                      <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+                      <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                  </div>
+              </div>
 
-            <!-- Newsletter Signup -->
-            <div class="col-md-3">
-                <h5>Newsletter</h5>
-                <p>Sign up for our newsletter to get the latest updates.</p>
-                <form action="#" method="post">
-                    <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
-                    <button type="submit" class="btn btn-light btn-block">Subscribe</button>
-                </form>
-            </div>
-        </div>
+              <!-- Newsletter Signup -->
+              <div class="col-md-3">
+                  <h5>Newsletter</h5>
+                  <p>Sign up for our newsletter to get the latest updates.</p>
+                  <form action="#" method="post">
+                      <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
+                      <button type="submit" class="btn btn-light btn-block">Subscribe</button>
+                  </form>
+              </div>
+          </div>
 
-        <!-- Copyright -->
-        <div class="text-center mt-4">
-            <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
-        </div>
-    </div>
-</footer>
+          <!-- Copyright -->
+          <div class="text-center mt-4">
+              <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+          </div>
+      </div>
+  </footer>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- Bootstrap JS and dependencies -->
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
