--- a/index.html
+++ b/index.html
@@ -59,16 +59,39 @@
       }
 
       .footer {
-          background-color: #343a40;
-          color: white;
-          padding: 20px;
-          text-align: center;
-      }
+            background-color: #343a40;
+            color: white;
+            padding: 40px 0;
+        }
+
+        .footer .footer-links a {
+            color: #adb5bd;
+            text-decoration: none;
+            margin-right: 20px;
+        }
+
+        .footer .footer-links a:hover {
+            color: #f8f9fa;
+        }
+
+        .footer .social-icons a {
+            color: #adb5bd;
+            margin: 0 10px;
+            font-size: 1.5rem;
+        }
+
+        .footer .social-icons a:hover {
+            color: #f8f9fa;
+        }
+
+        .footer .contact-info p {
+            margin: 5px 0;
+        }
   </style>
 </head>
 
 <body>
-  <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
+  <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
     <li class="nav-item" role="presentation">
       <a href="index.html"><button class="nav-link rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
