--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </li>
   </ul>
   <!-- Hero Section -->
-  <section style="background-image: ;" class="hero-section">
+  <section class="hero-section">
     <div>
       <h1>Welcome to MyWebsite</h1>
       <p>We deliver high-quality services with passion and professionalism.</p>
