--- a/about.html
+++ b/about.html
@@ -128,10 +128,10 @@
         <div class="col-md-3">
           <h5>Quick Links</h5>
           <div class="footer-links">
-            <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
             <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
           </div>
         </div>
 
