--- a/about.html
+++ b/about.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Learn more about MyWebsite, a company dedicated to providing high-quality services.">
+  <meta name="keywords" content="company, services, about us, MyWebsite">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-  <!-- Bootstrap CSS -->
-
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -75,7 +76,6 @@
     <li class="nav-item" role="presentation">
       <a href="index.html"><button class="nav-link rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
           role="tab" aria-selected="true">Home</button></a>
-
     </li>
     <li class="nav-item" role="presentation">
       <a href="about.html"><button class="nav-link rounded-5" id="About" data-bs-toggle="tab" type="button" role="tab"
@@ -84,7 +84,6 @@
     <li class="nav-item" role="presentation">
       <a href="contact.html"><button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button"
           role="tab" aria-selected="false">Contact</button></a>
-
     </li>
   </ul>
 
@@ -110,11 +109,9 @@
   </section>
 
   <!-- Footer -->
-  <!-- Footer Section -->
   <footer class="footer">
     <div class="container">
       <div class="row">
-        <!-- Contact Info -->
         <div class="col-md-3">
           <h5>Contact Us</h5>
           <div class="contact-info">
@@ -124,7 +121,6 @@
           </div>
         </div>
 
-        <!-- Quick Links -->
         <div class="col-md-3">
           <h5>Quick Links</h5>
           <div class="footer-links">
@@ -135,18 +131,16 @@
           </div>
         </div>
 
-        <!-- Social Media -->
         <div class="col-md-3">
           <h5>Follow Us</h5>
           <div class="social-icons">
-            <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+            <a href="#" target="_blank" class="facebook" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" target="_blank" class="twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank" class="instagram" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank" class="linkedin" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
 
-        <!-- Newsletter Signup -->
         <div class="col-md-3">
           <h5>Newsletter</h5>
           <p>Sign up for our newsletter to get the latest updates.</p>
@@ -157,7 +151,6 @@
         </div>
       </div>
 
-      <!-- Copyright -->
       <div class="text-center mt-4">
         <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
       </div>
@@ -165,10 +158,6 @@
   </footer>
 
   <!-- Bootstrap JS and dependencies -->
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
