--- a/contact.html
+++ b/contact.html
@@ -106,14 +106,11 @@
             <div class="col-6 mx-auto form ">
                 <h1>Contact Form</h1>
                 <form action="/action_page.php">
-                    <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-                    <label for="country">Country</label>
-                    <select id="country" name="country">
+                    <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
+                    <select id="country" name="country" required>
+                        <!-- Country options here -->
+                        <option value="" disabled selected>Select your country</option>
                         <option value="afghanistan">Afghanistan</option>
                         <option value="albania">Albania</option>
                         <option value="algeria">Algeria</option>
@@ -309,11 +306,8 @@
                         <option value="zambia">Zambia</option>
                         <option value="zimbabwe">Zimbabwe</option>
                     </select>
-
-                    <label for="subject">Subject</label>
-                    <textarea id="subject" name="subject" placeholder="Write something.."
-                        style="height:200px"></textarea>
-
+                    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"
+                        required></textarea>
                     <input type="submit" value="Submit">
                 </form>
             </div>
@@ -375,7 +369,7 @@
     </footer>
 
     <!-- Bootstrap JS and dependencies -->
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
