--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <title>Document</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
   <!-- Custom CSS -->
   <style>
     body {
@@ -35,11 +34,8 @@
       background-size: cover;
       background-position: center;
       color: white;
-      height: 100vh;
       display: flex;
       justify-content: center;
-      align-items: center;
-      text-align: center;
       padding: 60px 0;
       background-color: rgb(45 35 88);
     }
@@ -48,8 +44,6 @@
       font-size: 2.5rem;
       margin-bottom: 20px;
       margin-top: 30px;
-      width: 100%;
-      height: 200px;
     }
 
     .feature-card {
@@ -86,6 +80,7 @@
 
     .footer .contact-info p {
       margin: 5px 0;
+      word-wrap: break-word;
     }
   </style>
 </head>
@@ -153,7 +148,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <!-- Footer Section -->
   <footer class="footer">
     <div class="container">
@@ -209,7 +203,7 @@
   </footer>
 
   <!-- Bootstrap JS and dependencies -->
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
