New Updates for Seo or meta tags

--- a/about.html
+++ b/about.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Learn more about MyWebsite, a company dedicated to providing high-quality services.">
+  <meta name="description" content="Learn more about MyWebsite, our team, values, mission, and how we deliver high-quality services to our clients.">
+  <meta name="keywords" content="About Us, MyWebsite, company, team, services, quality, mission, values">
+  
+  <title>About Us</title>
   <meta name="keywords" content="company, services, about us, MyWebsite">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
@@ -74,16 +77,13 @@
   <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
     <li class="nav-item" role="presentation">
-      <a href="index.html"><button class="nav-link rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
-          role="tab" aria-selected="true">Home</button></a>
+      <a href="index.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Home</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="about.html"><button class="nav-link rounded-5" id="About" data-bs-toggle="tab" type="button" role="tab"
-          aria-selected="false">About</button></a>
+      <a href="about.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">About</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="contact.html"><button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button"
-          role="tab" aria-selected="false">Contact</button></a>
+      <a href="contact.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Contact</a>
     </li>
   </ul>
 
