--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="title" content="Contact Me - My Website">
+    <meta name="description"
+        content="Get in touch with us for web development, mobile apps, or digital marketing inquiries.">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Contact Me - My Website">
+    <meta property="og:description" content="Let's connect. Reach out for business or collaboration inquiries.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Contact Me</title>
 
     <style>
         body {
@@ -86,18 +94,13 @@
     <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary  shadow-sm" id="pillNav2" role="tablist"
         style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
         <li class="nav-item" role="presentation">
-            <a href="index.html"><button class="nav-link rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
-                    role="tab" aria-selected="true">Home</button></a>
-
+            <a href="index.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Home</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a href="about.html"><button class="nav-link rounded-5" id="About-tab2" data-bs-toggle="tab" type="button"
-                    role="tab" aria-selected="false">About</button></a>
+            <a href="about.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">About</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a href="contact.html"><button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab"
-                    type="button" role="tab" aria-selected="false">Contact</button></a>
-
+            <a href="contact.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Contact</a>
         </li>
     </ul>
 
