--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
 
 <head>
+  <!-- Basic Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- SEO Essentials -->
+  <meta name="title" content="My Web Site - Web & Mobile Solutions">
+  <meta name="description" content="Professional web development, mobile apps, and digital marketing services.">
+
+  <!-- Open Graph (for social sharing previews) -->
+  <meta property="og:title" content="My Web Site - Web & Mobile Solutions">
+  <meta property="og:description" content="Professional web development, mobile apps, and digital marketing services.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-  <title>Document</title>
+  <title>My Web Site</title>
 
   <!-- Custom CSS -->
   <style>
@@ -89,18 +97,13 @@
   <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
     <li class="nav-item" role="presentation">
-      <a href="index.html"><button class="nav-link rounded-5" id="home-tab2" data-bs-toggle="tab" type="button"
-          role="tab" aria-selected="true">Home</button></a>
-
+      <a href="index.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Home</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="about.html"><button class="nav-link rounded-5" id="About" data-bs-toggle="tab" type="button" role="tab"
-          aria-selected="false">About</button></a>
+      <a href="about.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">About</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="contact.html"><button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button"
-          role="tab" aria-selected="false">Contact</button></a>
-
+      <a href="contact.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Contact</a>
     </li>
   </ul>
   <!-- Hero Section -->
@@ -111,7 +114,6 @@
       <a href="about.html" class="btn btn-primary btn-lg">Learn More</a>
     </div>
   </section>
-
   <!-- Features Section -->
   <section class="feature-section text-center">
     <div class="container">
@@ -119,7 +121,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card feature-card">
-            <img src="img/web devp.jpeg" class="card-img-top" alt="Feature 1">
+            <img src="img/web-devp.jpeg" class="card-img-top" alt="Feature 1">
             <div class="card-body">
               <h5 class="card-title">Web Development</h5>
               <p class="card-text">We create modern, responsive, and user-friendly websites.</p>
