Adding blog page and Adding New nav btn

--- a/contact.html
+++ b/contact.html
@@ -103,6 +103,9 @@
         <li class="nav-item" role="presentation">
             <a href="contact.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Contact</a>
         </li>
+        <li class="nav-item" role="presentation">
+            <a href="blog.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Blogs</a>
+        </li>
     </ul>
 
     <div class="container">
