--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta property="og:description" content="Professional web development, mobile apps, and digital marketing services.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
   <style>
@@ -105,6 +106,9 @@
     <li class="nav-item" role="presentation">
       <a href="contact.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Contact</a>
     </li>
+    <li class="nav-item" role="presentation">
+      <a href="blog.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Blogs</a>
+    </li>
   </ul>
   <!-- Hero Section -->
   <section class="hero-section">
@@ -121,7 +125,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card feature-card">
-            <img src="img/web-devp.jpeg" class="card-img-top" alt="Feature 1">
+            <img src="img/web-devp.jpeg" class="card-img-top" alt="Web development service">
             <div class="card-body">
               <h5 class="card-title">Web Development</h5>
               <p class="card-text">We create modern, responsive, and user-friendly websites.</p>
@@ -130,7 +134,7 @@
         </div>
         <div class="col-md-4">
           <div class="card feature-card">
-            <img src="img/Mob.jpeg" class="card-img-top" alt="Feature 2">
+            <img src="img/Mob.jpeg" class="card-img-top" alt="Mobile development service">
             <div class="card-body">
               <h5 class="card-title">Mobile Development</h5>
               <p class="card-text">Building custom mobile applications for your business needs.</p>
@@ -139,7 +143,7 @@
         </div>
         <div class="col-md-4">
           <div class="card feature-card">
-            <img src="img/Digital.jpeg" class="card-img-top" alt="Feature 3">
+            <img src="img/Digital.jpeg" class="card-img-top" alt="Digital Marketing service">
             <div class="card-body">
               <h5 class="card-title">Digital Marketing</h5>
               <p class="card-text">We help you reach your audience with effective marketing strategies.</p>
@@ -205,7 +209,7 @@
   </footer>
 
   <!-- Bootstrap JS and dependencies -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
