--- a/blog.html
+++ b/blog.html
@@ -187,7 +187,7 @@
                     <div class="footer-links">
                         <a href="index.html">Home</a>
                         <a href="about.html">About</a>
-                        <a href="#">Services</a>
+                        <a href="blog.html">Blog</a>
                         <a href="contact.html">Contact</a>
                     </div>
                 </div>
