--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
           <div class="footer-links">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#">Services</a>
+            <a href="blog.html">Blogs</a>
             <a href="contact.html">Contact</a>
           </div>
         </div>
