Update the format of the code

--- a/index.html
+++ b/index.html
@@ -192,10 +192,14 @@
         <div class="col-md-3">
           <h5>Follow Us</h5>
           <div class="social-icons">
-            <a href="#" target="_blank" aria-label="Facebook" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank" aria-label="Twitter" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank" aria-label="Instagram" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+            <a href="#" target="_blank" aria-label="Facebook" rel="noopener noreferrer"><i
+                class="fab fa-facebook"></i></a>
+            <a href="#" target="_blank" aria-label="Twitter" rel="noopener noreferrer"><i
+                class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank" aria-label="Instagram" rel="noopener noreferrer"><i
+                class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer"><i
+                class="fab fa-linkedin"></i></a>
           </div>
         </div>
 
@@ -224,4 +228,5 @@
     crossorigin="anonymous"></script>
 
 </body>
+
 </html>
