--- a/contact.html
+++ b/contact.html
@@ -2,202 +2,204 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us - MyWebsite | Get in Touch</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Us - MyWebsite | Get in Touch</title>
 
-  <!-- SEO -->
-  <meta name="title" content="Contact Us - My Website">
-  <meta name="description" content="Get in touch with us for web development, mobile apps, or digital marketing inquiries.">
+    <!-- SEO -->
+    <meta name="title" content="Contact Us - My Website">
+    <meta name="description"
+        content="Get in touch with us for web development, mobile apps, or digital marketing inquiries.">
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Contact Us - My Website">
-  <meta property="og:description" content="Let's connect. Reach out for business or collaboration inquiries.">
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="img/contact-preview.jpg" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Contact Us - My Website">
+    <meta property="og:description" content="Let's connect. Reach out for business or collaboration inquiries.">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="img/contact-preview.jpg" />
 
-  <!-- CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
-  <!-- Styles -->
-  <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #2d2358;
-      color: #fff;
-    }
+    <!-- Styles -->
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #2d2358;
+            color: #fff;
+        }
 
-    .form-container {
-      background-color: #e1dcdc;
-      color: #000;
-      border-radius: 8px;
-      padding: 30px;
-      margin: 40px auto;
-      max-width: 700px;
-    }
+        .form-container {
+            background-color: #e1dcdc;
+            color: #000;
+            border-radius: 8px;
+            padding: 30px;
+            margin: 40px auto;
+            max-width: 700px;
+        }
 
-    label {
-      font-weight: 600;
-    }
+        label {
+            font-weight: 600;
+        }
 
-    input[type="text"],
-    input[type="email"],
-    select,
-    textarea {
-      width: 100%;
-      padding: 10px;
-      margin-top: 8px;
-      margin-bottom: 16px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      resize: vertical;
-    }
+        input[type="text"],
+        input[type="email"],
+        select,
+        textarea {
+            width: 100%;
+            padding: 10px;
+            margin-top: 8px;
+            margin-bottom: 16px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            resize: vertical;
+        }
 
-    input[type="submit"] {
-      background-color: #04AA6D;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 4px;
-      cursor: pointer;
-    }
+        input[type="submit"] {
+            background-color: #04AA6D;
+            color: white;
+            border: none;
+            padding: 12px 20px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-    input[type="submit"]:hover {
-      background-color: #45a049;
-    }
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
 
-    .footer {
-      background-color: #343a40;
-      color: white;
-      padding: 40px 0;
-    }
+        .footer {
+            background-color: #343a40;
+            color: white;
+            padding: 40px 0;
+        }
 
-    .footer .footer-links a {
-      color: #adb5bd;
-      text-decoration: none;
-      margin-right: 20px;
-    }
+        .footer .footer-links a {
+            color: #adb5bd;
+            text-decoration: none;
+            margin-right: 20px;
+        }
 
-    .footer .footer-links a:hover {
-      color: #f8f9fa;
-    }
+        .footer .footer-links a:hover {
+            color: #f8f9fa;
+        }
 
-    .footer .social-icons a {
-      color: #adb5bd;
-      margin: 0 10px;
-      font-size: 1.5rem;
-    }
+        .footer .social-icons a {
+            color: #adb5bd;
+            margin: 0 10px;
+            font-size: 1.5rem;
+        }
 
-    .footer .social-icons a:hover {
-      color: #f8f9fa;
-    }
+        .footer .social-icons a:hover {
+            color: #f8f9fa;
+        }
 
-    @media (max-width: 768px) {
-      .form-container {
-        padding: 20px;
-      }
-    }
-  </style>
+        @media (max-width: 768px) {
+            .form-container {
+                padding: 20px;
+            }
+        }
+    </style>
 </head>
 
 <body>
 
-  <!-- Navigation -->
-  <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
-    style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-    <li class="nav-item" role="presentation">
-      <a href="index.html" class="nav-link rounded-5 btn">Home</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a href="about.html" class="nav-link rounded-5 btn">About</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a href="contact.html" class="nav-link rounded-5 btn active" aria-current="page">Contact</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
-    </li>
-  </ul>
+    <!-- Navigation -->
+    <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
+        style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+        <li class="nav-item" role="presentation">
+            <a href="index.html" class="nav-link rounded-5 btn">Home</a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a href="about.html" class="nav-link rounded-5 btn">About</a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a href="contact.html" class="nav-link rounded-5 btn active" aria-current="page">Contact</a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
+        </li>
+    </ul>
 
-  <!-- Contact Form -->
-  <div class="container">
-    <div class="form-container shadow-lg">
-      <h2 class="mb-4 text-center">Contact Us</h2>
-      <form action="/action_page.php" method="POST">
-        <div class="mb-3">
-          <label for="fname">First Name</label>
-          <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
-        </div>
-        <div class="mb-3">
-          <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
-        </div>
-        <div class="mb-3">
-          <label for="country">Country</label>
-          <select id="country" name="country" required>
-            <option value="" disabled selected>Select your country</option>
-            <option value="india">India</option>
-            <option value="usa">United States</option>
-            <option value="canada">Canada</option>
-            <option value="australia">Australia</option>
-            <!-- Add more if needed -->
-          </select>
-        </div>
-        <div class="mb-3">
-          <label for="subject">Message</label>
-          <textarea id="subject" name="subject" placeholder="Write your message here..." style="height:200px" required></textarea>
-        </div>
-        <input type="submit" value="Submit">
-      </form>
-    </div>
-  </div>
-
-  <!-- Footer Section -->
-  <footer class="footer mt-5">
+    <!-- Contact Form -->
     <div class="container">
-      <div class="row">
-        <div class="col-md-3 mb-4">
-          <h5>Contact Us</h5>
-          <p>Email: info@mywebsite.com</p>
-          <p>Phone: +1 234 567 890</p>
-          <p>Address: 1234 Street Name, City, Country</p>
+        <div class="form-container shadow-lg">
+            <h2 class="mb-4 text-center">Contact Us</h2>
+            <form action="/action_page.php" method="POST">
+                <div class="mb-3">
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
+                </div>
+                <div class="mb-3">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
+                </div>
+                <div class="mb-3">
+                    <label for="country">Country</label>
+                    <select id="country" name="country" required>
+                        <option value="" disabled selected>Select your country</option>
+                        <option value="india">India</option>
+                        <option value="usa">United States</option>
+                        <option value="canada">Canada</option>
+                        <option value="australia">Australia</option>
+                        <!-- Add more if needed -->
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="subject">Message</label>
+                    <textarea id="subject" name="subject" placeholder="Write your message here..." style="height:200px"
+                        required></textarea>
+                </div>
+                <input type="submit" value="Submit">
+            </form>
         </div>
-        <div class="col-md-3 mb-4">
-          <h5>Quick Links</h5>
-          <div class="footer-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="blog.html">Blogs</a>
-            <a href="contact.html">Contact</a>
-          </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <h5>Follow Us</h5>
-          <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-          </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <h5>Newsletter</h5>
-          <p>Get our latest updates in your inbox.</p>
-          <form>
-            <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
-            <button type="submit" class="btn btn-light w-100">Subscribe</button>
-          </form>
-        </div>
-      </div>
-      <div class="text-center pt-3">
-        <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
-      </div>
     </div>
-  </footer>
 
-  <!-- JS Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Footer Section -->
+    <footer class="footer mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 mb-4">
+                    <h5>Contact Us</h5>
+                    <p>Email: info@mywebsite.com</p>
+                    <p>Phone: +1 234 567 890</p>
+                    <p>Address: 1234 Street Name, City, Country</p>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <h5>Quick Links</h5>
+                    <div class="footer-links">
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="blog.html">Blogs</a>
+                        <a href="contact.html">Contact</a>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <h5>Follow Us</h5>
+                    <div class="social-icons">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <h5>Newsletter</h5>
+                    <p>Get our latest updates in your inbox.</p>
+                    <form>
+                        <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
+                        <button type="submit" class="btn btn-light w-100">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+            <div class="text-center pt-3">
+                <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- JS Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
