Upadate the fromat of code

--- a/blog.html
+++ b/blog.html
@@ -10,14 +10,14 @@
     <title>Blog | MyWebsite</title>
     <meta name="description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
     <meta name="keywords" content="Web Development, Mobile Apps, SEO, Blog, Technology, Marketing" />
-    
+
     <!-- Open Graph Meta Tags for better social media sharing -->
     <meta property="og:title" content="Blog | MyWebsite" />
     <meta property="og:description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
     <meta property="og:image" content="img/Blog/og-image.jpg" />
     <meta property="og:url" content="https://mywebsite.com/blog.html" />
     <meta property="og:type" content="website" />
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
@@ -175,7 +175,8 @@
             <!-- Blog Post 5 -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/startup-team.webp" class="card-img-top" alt="Choosing a Tech Stack" loading="lazy">
+                    <img src="img/Blog/startup-team.webp" class="card-img-top" alt="Choosing a Tech Stack"
+                        loading="lazy">
                     <div class="card-body">
                         <h5 class="card-title">How to Choose the Right Tech Stack</h5>
                         <p class="card-text">Backend, frontend, databases—here’s how we help clients choose the best
@@ -216,10 +217,14 @@
                 <div class="col-md-3">
                     <h5>Follow Us</h5>
                     <div class="social-icons">
-                        <a href="#" target="_blank" class="facebook" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" target="_blank" class="twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" target="_blank" class="instagram" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" target="_blank" class="linkedin" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" target="_blank" class="facebook" aria-label="Facebook"><i
+                                class="fab fa-facebook"></i></a>
+                        <a href="#" target="_blank" class="twitter" aria-label="Twitter"><i
+                                class="fab fa-twitter"></i></a>
+                        <a href="#" target="_blank" class="instagram" aria-label="Instagram"><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="#" target="_blank" class="linkedin" aria-label="LinkedIn"><i
+                                class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
 
@@ -228,8 +233,10 @@
                     <h5>Newsletter</h5>
                     <p>Sign up for our newsletter to get the latest updates.</p>
                     <form action="#" method="post">
-                        <input type="email" class="form-control mb-2" placeholder="Enter your email" required aria-label="Email address for newsletter">
-                        <button type="submit" class="btn btn-light btn-block" aria-label="Subscribe to newsletter">Subscribe</button>
+                        <input type="email" class="form-control mb-2" placeholder="Enter your email" required
+                            aria-label="Email address for newsletter">
+                        <button type="submit" class="btn btn-light btn-block"
+                            aria-label="Subscribe to newsletter">Subscribe</button>
                     </form>
                 </div>
             </div>
