--- a/index.html
+++ b/index.html
@@ -21,80 +21,9 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <!-- Custom CSS -->
+   <link rel="stylesheet" href="CSS/Comman_Style.css">
   <link rel="stylesheet" href="CSS/Index_Style.css">
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #f8f9fa;
-    }
-
-    .hero-section {
-      background: url('img/Imgb') no-repeat center center;
-      background-size: cover;
-      color: white;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
-    .hero-section h1 {
-      font-size: 3.5rem;
-    }
-
-    .feature-section {
-      background-color: rgb(45 35 88);
-      color: white;
-      padding: 60px 0;
-      text-align: center;
-    }
-
-    .feature-section h2 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-      margin-top: 30px;
-    }
-
-    .feature-card {
-      background-color: rgb(68, 105, 183);
-    }
-
-    .feature-card img {
-      object-fit: cover;
-      height: 200px;
-    }
-
-    .footer {
-      background-color: #343a40;
-      color: white;
-      padding: 40px 0;
-    }
-
-    .footer .footer-links a {
-      color: #adb5bd;
-      text-decoration: none;
-      margin-right: 20px;
-    }
-
-    .footer .footer-links a:hover {
-      color: #f8f9fa;
-    }
-
-    .footer .social-icons a {
-      color: #adb5bd;
-      margin: 0 10px;
-      font-size: 1.5rem;
-    }
-
-    .footer .social-icons a:hover {
-      color: #f8f9fa;
-    }
-
-    .footer .contact-info p {
-      margin: 5px 0;
-      word-wrap: break-word;
-    }
-  </style> -->
+   
 </head>
 
 <body>
