--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,7 @@
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="CSS/Comman_Style.css">
     <link rel="stylesheet" href="CSS/Blog_Style.css">
 </head>
 
