--- a/blog.html
+++ b/blog.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Essentials -->
-    <title>Blog | MyWebsite</title>
+    <title>Blog | ThirdEye Digital Hub</title>
     <meta name="description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
     <meta name="keywords" content="Web Development, Mobile Apps, SEO, Blog, Technology, Marketing" />
 
     <!-- Open Graph Meta Tags for better social media sharing -->
-    <meta property="og:title" content="Blog | MyWebsite" />
+    <meta property="og:title" content="Blog | ThirdEye Digital Hub" />
     <meta property="og:description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
     <meta property="og:image" content="img/Blog/og-image.jpg" />
-    <meta property="og:url" content="https://mywebsite.com/blog.html" />
+    <meta property="og:url" content="https://ThirdEye Digital Hub.com/blog.html" />
     <meta property="og:type" content="website" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -134,7 +134,7 @@
                 <div class="col-md-3">
                     <h5>Contact Us</h5>
                     <div class="contact-info">
-                        <p><strong>Email:</strong> info@mywebsite.com</p>
+                        <p><strong>Email:</strong> info@ThirdEye Digital Hub.com</p>
                         <p><strong>Phone:</strong> +1 234 567 890</p>
                         <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
                     </div>
@@ -181,7 +181,7 @@
 
             <!-- Copyright -->
             <div class="text-center mt-4">
-                <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+                <p>&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
