--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - MyWebsite | Get in Touch</title>
+    <title>Contact Us - ThirdEye Digital Hub | Get in Touch</title>
 
     <!-- SEO -->
     <meta name="title" content="Contact Us - My Website">
@@ -82,7 +82,7 @@
             <div class="row">
                 <div class="col-md-3 mb-4">
                     <h5>Contact Us</h5>
-                    <p>Email: info@mywebsite.com</p>
+                    <p>Email: info@ThirdEye Digital Hub.com</p>
                     <p>Phone: +1 234 567 890</p>
                     <p>Address: 1234 Street Name, City, Country</p>
                 </div>
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="text-center pt-3">
-                <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+                <p>&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
