--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyWebsite | High-Quality Services and Solutions</title>
+  <title>ThirdEye Digital Hub | High-Quality Services and Solutions</title>
 
   <!-- SEO Essentials -->
   <meta name="title" content="My Web Site - Web & Mobile Solutions">
@@ -48,7 +48,7 @@
   <!-- Hero Section -->
   <section class="hero-section">
     <div>
-      <h1>Welcome to MyWebsite</h1>
+      <h1>Welcome to ThirdEye Digital Hub</h1>
       <p>We deliver high-quality services with passion and professionalism.</p>
       <a href="about.html" class="btn btn-primary btn-lg">Learn More</a>
     </div>
@@ -99,7 +99,7 @@
         <div class="col-md-3">
           <h5>Contact Us</h5>
           <div class="contact-info">
-            <p><strong>Email:</strong> info@mywebsite.com</p>
+            <p><strong>Email:</strong> info@ThirdEye Digital Hub.com</p>
             <p><strong>Phone:</strong> +1 234 567 890</p>
             <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
           </div>
@@ -145,7 +145,7 @@
 
       <!-- Copyright -->
       <div class="text-center mt-4">
-        <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+        <p>&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
       </div>
     </div>
   </footer>
