--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Learn more about MyWebsite, our team, values, mission, and how we deliver high-quality services to our clients.">
-  <meta name="keywords" content="About Us, MyWebsite, company, team, services, quality, mission, values">
+    content="Learn more about ThirdEye Digital Hub, our team, values, mission, and how we deliver high-quality services to our clients.">
+  <meta name="keywords" content="About Us, ThirdEye Digital Hub, company, team, services, quality, mission, values">
 
-  <title>About Us - MyWebsite | Learn More About Our Team and Mission</title>
+  <title>About Us - ThirdEye Digital Hub | Learn More About Our Team and Mission</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
@@ -47,7 +47,7 @@
     <div class="container">
       <h2>Our Story</h2>
       <p>
-        Welcome to MyWebsite! We are a company dedicated to providing high-quality services to our clients. Our
+        Welcome to ThirdEye Digital Hub! We are a company dedicated to providing high-quality services to our clients. Our
         mission is to deliver exceptional results and build long-term relationships based on trust and integrity.
       </p>
       <p>
@@ -64,7 +64,7 @@
         <div class="col-md-3">
           <h5>Contact Us</h5>
           <div class="contact-info">
-            <p><strong>Email:</strong> info@mywebsite.com</p>
+            <p><strong>Email:</strong> info@ThirdEye Digital Hub.com</p>
             <p><strong>Phone:</strong> +1 234 567 890</p>
             <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
           </div>
@@ -101,7 +101,7 @@
       </div>
 
       <div class="text-center mt-4">
-        <p>&copy; 2025 MyWebsite. All Rights Reserved.</p>
+        <p>&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
       </div>
     </div>
   </footer>
