--- a/about.html
+++ b/about.html
@@ -47,7 +47,8 @@
     <div class="container">
       <h2>Our Story</h2>
       <p>
-        Welcome to ThirdEye Digital Hub! We are a company dedicated to providing high-quality services to our clients. Our
+        Welcome to ThirdEye Digital Hub! We are a company dedicated to providing high-quality services to our clients.
+        Our
         mission is to deliver exceptional results and build long-term relationships based on trust and integrity.
       </p>
       <p>
