--- a/index.html
+++ b/index.html
@@ -2,22 +2,17 @@
 <html lang="en">
 
 <head>
-  <!-- Basic Meta -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ThirdEye Digital Hub | High-Quality Services and Solutions</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ThirdEye Digital Hub | High-Quality Services</title>
 
-  <!-- SEO Essentials -->
-  <meta name="title" content="ThirdEye Digital Hub - Web & Mobile Solutions">
+  <!-- Meta for SEO -->
   <meta name="description" content="Professional web development, mobile apps, and digital marketing services.">
-
-  <!-- Open Graph Meta -->
   <meta property="og:title" content="ThirdEye Digital Hub - Web & Mobile Solutions">
   <meta property="og:description" content="Professional web development, mobile apps, and digital marketing services.">
 
   <!-- Stylesheets -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
@@ -29,16 +24,15 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" role="navigation"
-    style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-    <a href="index.html" class="nav-link rounded-5 btn active" aria-current="page">Home</a>
+  <nav class="nav nav-pills nav-fill gap-2 p-1 bg-primary shadow-sm">
+    <a href="index.html" class="nav-link rounded-5 btn active">Home</a>
     <a href="about.html" class="nav-link rounded-5 btn">About</a>
     <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
     <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
   </nav>
 
   <!-- Hero Section -->
-  <section class="hero-section d-flex align-items-center justify-content-center text-center py-5">
+  <section class="hero-section">
     <div>
       <h1 class="display-4 fw-bold">Welcome to ThirdEye Digital Hub</h1>
       <p class="lead">We deliver high-quality services with passion and professionalism.</p>
@@ -46,35 +40,35 @@
     </div>
   </section>
 
-  <!-- Features Section -->
-  <section class="feature-section py-5">
+  <!-- Features -->
+  <section class="feature-section">
     <div class="container">
-      <h2 class="text-center mb-5">What We Do</h2>
+      <h2 class="mb-5">What We Do</h2>
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card feature-card h-100 shadow-sm">
-            <img src="img/web-devp.jpeg" class="card-img-top" alt="Modern website development interface" loading="lazy">
+            <img src="img/web-devp.jpeg" class="card-img-top" alt="Web Development">
             <div class="card-body">
-              <h3 class="card-title h5">Web Development</h3>
-              <p class="card-text">We create modern, responsive, and user-friendly websites.</p>
+              <h3 class="h5">Web Development</h3>
+              <p>We create modern, responsive, and user-friendly websites.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card feature-card h-100 shadow-sm">
-            <img src="img/Mob.jpeg" class="card-img-top" alt="Mobile application interface" loading="lazy">
+            <img src="img/Mob.jpeg" class="card-img-top" alt="Mobile Development">
             <div class="card-body">
-              <h3 class="card-title h5">Mobile Development</h3>
-              <p class="card-text">Building custom mobile applications for your business needs.</p>
+              <h3 class="h5">Mobile Development</h3>
+              <p>Building custom mobile applications for your business needs.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card feature-card h-100 shadow-sm">
-            <img src="img/Digital.jpeg" class="card-img-top" alt="Digital marketing strategy chart" loading="lazy">
+            <img src="img/Digital.jpeg" class="card-img-top" alt="Digital Marketing">
             <div class="card-body">
-              <h3 class="card-title h5">Digital Marketing</h3>
-              <p class="card-text">We help you reach your audience with effective marketing strategies.</p>
+              <h3 class="h5">Digital Marketing</h3>
+              <p>We help you reach your audience with effective marketing strategies.</p>
             </div>
           </div>
         </div>
@@ -82,21 +76,16 @@
     </div>
   </section>
 
-  <!-- Footer Section -->
-  <footer class="footer py-5">
+  <!-- Footer -->
+  <footer class="footer text-white py-5">
     <div class="container">
       <div class="row">
-        <!-- Contact Info -->
         <div class="col-md-3 mb-4">
           <h5>Contact Us</h5>
-          <address>
-            <p><strong>Email:</strong> <a href="mailto:info@ThirdEyeDigitalHub.com">info@ThirdEyeDigitalHub.com</a></p>
-            <p><strong>Phone:</strong> +1 234 567 890</p>
-            <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
-          </address>
+          <p><strong>Email:</strong> <a href="mailto:info@ThirdEyeDigitalHub.com">info@ThirdEyeDigitalHub.com</a></p>
+          <p><strong>Phone:</strong> +1 234 567 890</p>
+          <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
         </div>
-
-        <!-- Quick Links -->
         <div class="col-md-3 mb-4">
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
@@ -106,31 +95,23 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-
-        <!-- Social Media -->
         <div class="col-md-3 mb-4">
           <h5>Follow Us</h5>
-          <div class="social-icons d-flex gap-3">
+          <div class="d-flex gap-3">
             <a href="#" aria-label="Facebook"><i class="fab fa-facebook fa-lg"></i></a>
             <a href="#" aria-label="Twitter"><i class="fab fa-twitter fa-lg"></i></a>
             <a href="#" aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
           </div>
         </div>
-
-        <!-- Newsletter Signup -->
         <div class="col-md-3 mb-4">
           <h5>Newsletter</h5>
-          <p>Sign up for our newsletter to get the latest updates.</p>
-          <form action="#" method="post" novalidate>
-            <label for="newsletterEmail" class="visually-hidden">Email address</label>
-            <input type="email" id="newsletterEmail" name="email" class="form-control mb-2"
-              placeholder="Enter your email" required>
+          <form>
+            <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
             <button type="submit" class="btn btn-primary w-100">Subscribe</button>
           </form>
         </div>
       </div>
-
       <div class="text-center mt-4">
         <p class="mb-0">&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
       </div>
@@ -138,9 +119,7 @@
   </footer>
 
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
