--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="nav nav-pills nav-fill gap-2 p-1 bg-primary shadow-sm">
-    <a href="index.html" class="nav-link rounded-5 btn active">Home</a>
-    <a href="about.html" class="nav-link rounded-5 btn">About</a>
-    <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
-    <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
+  <nav class="nav nav-pills nav-fill nav-custom" role="navigation">
+    <a href="index.html" class="nav-link active">Home</a>
+    <a href="about.html" class="nav-link">About</a>
+    <a href="contact.html" class="nav-link">Contact</a>
+    <a href="blog.html" class="nav-link">Blogs</a>
   </nav>
-
+  
   <!-- Hero Section -->
   <section class="hero-section">
     <div>
